the site seems to have sprung a leak...

--- a/changelog.html
+++ b/changelog.html
@@ -7,6 +7,12 @@
     <body>
         <p style="word-wrap: break-word; white-space: pre-wrap;">
         # Changelog
+        08/04/12025: added jsaniken's button
+        07/31/12025: made a logo for myself and added some antipixels and buttons. the site seems to
+        have sprung a leak... <br>
+        07/10/12025: moved hit counter to sidebar. 14 hits already! <br>
+        07/09/12025: moved to lexm.leprd.space! old site is still around, i'll probably turn it into
+        a landing page or something eventually. also added a hitcounter to the footer <br>
         06/13/12025: fix kirsvanta button, add new song, add mastodon link. <br>
         06/06/12025: emoticon rain, guestbook icon, new 88x31 button, retronaut webring. <br>
         06/05/12025: added custom spacehey icon, horizontal rules. <br>
