--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     <div class="container">
         <div class="main-content">
             <header>
-                <h1>lexm</h1>
+                <!-- <h1>lexm</h1> -->
+                <br>
+                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/images/lexm_wide.png" alt="lexm" width="84" heigh="36">
                 <p style = "font-size: 22px;">朱晓瑞</p>
                 <p style="font-family: var(--main-font);">Kirito139 ·
                 roguewielder</p>
@@ -265,6 +267,10 @@ I’m sorry
             </main>
         </div>
         <div class="sidebar">
+            <p> Visits since 2025-07-09 at 16:10: <a href="https://smallcounter.com">
+                <img src="https://smallcounter.com/count.php?c_style=88&id=1752102264" border=0 alt="web counter">
+            </a>
+            
             <p>Swatch time:
             <a href="https://wiki.melonland.net/swatch_time" style="color:
                 inherit; text-decoration: none;">
@@ -378,7 +384,9 @@ I’m sorry
             </a>
             <!-- Tertiary Apocalypse -->
             <a href="https://tertiaryapocalypse.neocities.org" style="text-decoration: none;">
-                <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/tertiaryapocalypse.png" alt="tertiaryapocalypse site button">
+                <img
+                src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/tertiaryapocalypse.png"
+                alt="tertiaryapocalypse site button">
             </a>
             <!-- Velvet Blue -->
             <a href="https://velvetblue.neocities.org">
@@ -393,8 +401,15 @@ I’m sorry
                 <img src="https://raw.githubusercontent.com/Kirito139/stash/refs/heads/main/88x31/kirsvantas.gif" alt="https://kirsvantas.com">
             </a>
             <!-- Dimden -->
-            <a href="https://dimden.dev/"><img
-                src="https://dimden.dev/services/images/88x31.gif"></a> <p>
+            <a href="https://dimden.dev/">
+                <img src="https://dimden.dev/services/images/88x31.gif">
+            </a>
+            <br>
+            <!-- jsaniken -->
+            <a href="https://jsaniken.neocities.org/">
+                <img src="https://jsaniken.neocities.org/JSAbutton.gif">
+            </a>
+            <br>
             <!-- Leia uwu -->
             <a href="https://web.archive.org/web/20241003071517/https://leia.pages.gay/"
                 style="color: inherit;">leia_uwu's homepage (archive link, she
@@ -681,16 +696,39 @@ I’m sorry
             </a>
 
         </div>
-            Visits since 2025-07-09 at 16:10: <a href="https://smallcounter.com"><img
-                src="https://smallcounter.com/count.php?c_style=88&id=1752102264" border=0 alt="web
-                counter"></a>
-        <p>This site was wrought from raw html, css, and javascript with the
-        help of <a href="https://perplexity.com" style="color:
-        inherit;">Perplexity</a> and a large dose of procrastination. Kindly hosted for free by
-    ![leprd](https://leprd.space)</p>
+        <p>This site was wrought from raw html, css, and javascript with the help of
+        <a href="https://perplexity.com" style="color: inherit;">Perplexity</a>
+        and a large dose of procrastination.
+        Kindly hosted for free by
+        <a href="https://leprd.space" style="color: inherit;">https://leprd.space</a>
+        !
+        </p>
         <p>·</p>
         <p><a href="changelog.html" style="color: inherit;">Changelog</a>
         </p>
     </footer>
+<link href="https://melonking.net/styles/flood.css" rel="stylesheet" type="text/css" media="all" />
+<script src="https://melonking.net/scripts/flood.js"></script>
+<!--
+<script>
+    // Goo Flood!
+    flood.texture = "https://melonking.net/images/flood-goo.png";
+    flood.textureWidth = 256; // Resize to match your image file
+    flood.textureHeight = 256;
+    flood.drainSound = "https://melonking.net/audio/ui/squish.mp3";
+    flood.drainTooSoonSound = "https://melonking.net/audio/ui/clunk.mp3";
+    // Goo Messages
+    flood.msg.info = "🧪";
+    flood.msg.rising = "The goo is growing!";
+    flood.msg.falling = "The goo is shrinking!";
+    flood.msg.toosoon = "You are too sticky to do that!";
+    flood.msg.one = "You see some goo on the floor!";
+    flood.msg.two = "Oh wow goo is everywhere!";
+    flood.msg.three = "Ahhh the goo is upto your knees!";
+    flood.msg.four = "The goo is overwhelming!";
+    flood.msg.five = "Everything is coverd in goo!";
+    flood.msg.six = "100% Gooooo!";
+</script>
+-->
 </body>
 </html>
