--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <p>Hello there! My name's Lennier.</p>
     <p>I'm a student at Lowell HS in San Francisco, where I'm studying advanced math, physics, and
     computer science. I'm also co-lead of Operations at <a href="https://www.flightclubaerospace.com/">Flight
-        Club Aerospace</a>, a student-run aerospace club.</p>
+        Club Aerospace</a>, a student-run nonprofit building an FAA-compliant ultralight aircraft.</p>
+    <p>I enjoy playing the guitar, reading sci-fi and fantasy novels, mountain biking, running, and
+    programming.</p>
+    <p>I'm also a member of <a href="https://www.hackclub.com/">Hack Club</a>, a nonprofit
+    organization helping teens fall in love with computers and electronics.</p>
     <img src="IMG_4467.jpeg" alt="What a dashing young fellow!">
 </body>
 </html>
