--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     programming.</p>
     <p>I'm also a member of <a href="https://www.hackclub.com/">Hack Club</a>, a nonprofit
     organization helping teens fall in love with computers and electronics.</p>
+    <p>If you'd like to contact me, you can email me at 
+    <a href="mailto:lenniermulder@icloud.com">lenniermulder[AT]icloud[DOT]com</a>, though be warned that I
+    likely won't respond immediately.</p>
     <img src="IMG_4467.jpeg" alt="What a dashing young fellow!">
 </body>
 </html>
