--- a/index.html
+++ b/index.html
@@ -7,17 +7,23 @@
     <title>Lennier Mulder</title>
 </head>
 <body>
-    <p>Hello there! My name's Lennier.</p>
-    <p>I'm a student at Lowell HS in San Francisco, where I'm studying advanced math, physics, and
-    computer science. I'm also co-lead of Operations at <a href="https://www.flightclubaerospace.com/">Flight
-        Club Aerospace</a>, a student-run nonprofit building an FAA-compliant ultralight aircraft.</p>
-    <p>I enjoy playing the guitar, reading sci-fi and fantasy novels, mountain biking, running, and
-    programming.</p>
-    <p>I'm also a member of <a href="https://www.hackclub.com/">Hack Club</a>, a nonprofit
-    organization helping teens fall in love with computers and electronics.</p>
-    <p>If you'd like to contact me, you can email me at 
-    <a href="mailto:lenniermulder@icloud.com">lenniermulder[AT]icloud[DOT]com</a>, though be warned that I
-    likely won't respond immediately.</p>
     <img src="IMG_4467.jpeg" alt="What a dashing young fellow!">
+    <p><a href="mailto:lenniermulder@icloud.com">lenniermulder[AT]icloud[DOT]com</a></p>
+    <p>Hello! My name's Lennier.</p>
+    <p>I'm currently a student at Lowell HS in San Francisco, where I've been taking the advanced math track,
+    as well as courses in Physics and Computer Science. I'm co-lead of Operations at <a
+        href="https://www.flightclubaerospace.com/">Flight Club Aerospace</a>, a student-run
+    nonprofit building an FAA-compliant ultralight aircraft from scratch.</p>
+    <p>I enjoy playing the guitar, reading hard SF/hard fantasy novels, mountain biking, running, and
+    programming.</p>
+    <p>I'm a member of <a href="https://www.hackclub.com/">Hack Club</a>, a nonprofit
+    organization helping teens fall in love with computers and electronics. They've helped me build
+    some pretty cool things, like <a href="https://github.com/Kirito139/earthscii">a 3d map viewer
+        for the terminal</a> and <a href="https://github.com/jamdotjar/splotch">a cheap dual-arm SCARA
+        plotter</a>!</p>
+    <p>Recently, I joined <a
+        href="https://www.team10221.org/"a>#1 Sea Bass</a> (FIRST Robotics Competition team #10221)
+    as their main subsytems programmer and business lead, and I'm learning so much about robotics
+    and engineering! Good luck to all the other teams in REBUILT, this season will be fun.
 </body>
 </html>
